# bls

./: .gitmodules  CMakeLists.txt  readme.md
include/bls/: bls.h  bls.hpp  bls_256_lib.hpp
src/: bls_256_lib.cpp  bls_c256.cpp  bls_c_impl.hpp
test/: bls_256_lib_test.cpp  bls_test.cpp  bls_test.hpp  main.cpp  speed_test.cpp
